# py-dateutil-pydantic

./: LICENSE  README.md  pyproject.toml
src/py_dateutil_pydantic/: __init__.py  _parsing.py  _relativedelta.py  _rrule.py  _tz.py  _weekday.py
tests/: test_integration.py  test_parsing.py  test_relativedelta.py  test_rrule.py  test_tz.py  test_weekday.py
